name:                linca
version:             0.2
synopsis:            general-purpose library for haskell
homepage:            https://bitbucket.org/brunnerj/linca
license:             GPL-3
license-file:        LICENSE
author:              Julian Brunner
maintainer:          julianbrunner@gmail.com
category:            Library
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules:
    Linca.Graphics.Color
    Linca.Graphics.AlphaColor
    Linca.Graphics.NamedColor
    Linca.Error
    Linca.Basic
    Linca.Scalar
    Linca.Range
    Linca.Map
    Linca.List
    Linca.Monad
    Linca.ByteString
    Linca.Cryptography
    Linca.Timing
    Linca.Random
  build-depends:       base, mtl, bytestring, time, random
  ghc-options:         -Wall -fno-warn-tabs -fno-warn-name-shadowing
  default-language:    Haskell2010
