name:                linca
version:             0.4
synopsis:            general-purpose library
homepage:            https://bitbucket.org/brunnerj/linca
license:             GPL-3
license-file:        LICENSE
author:              Julian Brunner
maintainer:          julianbrunner@gmail.com
category:            Library
build-type:          Simple
cabal-version:       >= 1.10

library
  default-language:    Haskell2010
  default-extensions:  NoMonomorphismRestriction RankNTypes
  build-depends:       base >= 4.9, containers >= 0.5, mtl >= 2.2, filepath >= 1.4, directory >= 1.2, bytestring >= 0.10, time >= 1.5, random >= 1.1
  ghc-options:         -Wall -fno-warn-tabs -fno-warn-name-shadowing -dynamic
  exposed-modules:
    Linca.Graphics.Color
    Linca.Graphics.AlphaColor
    Linca.Graphics.NamedColor
    Linca.Error
    Linca.Basic
    Linca.NaturalEncoding
    Linca.Scalar
    Linca.Range
    Linca.Map
    Linca.Lens
    Linca.List
    Linca.Monad
    Linca.ByteString.Lazy
    Linca.Cryptography
    Linca.Timing
    Linca.Random
    Linca.Files
