cabal-version:       3.8

name:                linca
version:             0.4

common configuration
  default-language:    GHC2021
  default-extensions:
    DataKinds
    DerivingStrategies
    DisambiguateRecordFields
    ExplicitNamespaces
    GADTs
    MonoLocalBinds
    LambdaCase
    RoleAnnotations
  ghc-options:         -Wall -Wunused-packages -Wmissing-export-lists -Wprepositive-qualified-module -Wno-name-shadowing

library
  import:              configuration
  build-depends:       base >= 4.9, containers >= 0.5, mtl >= 2.2, filepath >= 1.4, directory >= 1.2, bytestring >= 0.10, time >= 1.5, random >= 1.1
  hs-source-dirs:      source
  exposed-modules:
    Linca.Graphics.Color
    Linca.Graphics.AlphaColor
    Linca.Graphics.NamedColor
    Linca.Error
    Linca.Basic
    Linca.Countable
    Linca.Scalar
    Linca.Range
    Linca.Map
    Linca.Lens
    Linca.List
    Linca.Monad
    Linca.ByteString.Lazy
    Linca.Cryptography
    Linca.Timing
    Linca.Random
    Linca.Files
